--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Brian Bauer",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/node": "^15.0.1",
@@ -20,6 +21,7 @@
     "node": ">=14"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1"
   }
