--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,4 +9,7 @@ WORKDIR /usr/share/nginx/html
 # Copy our code
 COPY ./build .
 
+# nginx conf for reverse proxy
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
