🤦‍♂️ forgot to configure CORS for the api routes. All the docker scripts work great now at least. added self signed ssl certs for localhost to nginx in the process 🤷‍♂️

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,7 +9,10 @@ WORKDIR /usr/share/nginx/html
 # Copy our code
 COPY ./build .
 
-# nginx conf for reverse proxy
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+# nginx conf and keys for reverse proxy (obviously wouldn't store real keys like this)
+COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/localhost.key /etc/ssl/private/localhost.key
+COPY ./nginx/localhost.crt /etc/ssl/certs/localhost.crt
 
 EXPOSE 80
+EXPOSE 443
