--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,16 +1,21 @@
-server { 
+
+server {
  listen 80;
+ listen 443 ssl http2 default_server;
  server_name frontend;
+ ssl_certificate /etc/ssl/certs/localhost.crt;
+ ssl_certificate_key /etc/ssl/private/localhost.key;
  location / {
    root /usr/share/nginx/html;
    try_files $uri /index.html;
  }
+
  
  location /api {
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-NginX-Proxy true;
-   proxy_pass http://backend:8080/api;
+   proxy_pass http://backend:8081/api;
    proxy_ssl_session_reuse off;
    proxy_set_header Host $http_host;
    proxy_cache_bypass $http_upgrade;
