--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@supabase/supabase-js": "^1.21.0",
+    "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "next": "^11.0.1",
     "prettier": "^2.3.2",
