--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,36 @@
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
+
+# next.js
+/.next
+/out/
 
 # production
 /build
 
 # misc
 .DS_Store
+*.pem
+to-do.md
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# vscode
+.vscode
+
+#lint
+.eslintignore
