--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-form": "^8.3.2"
   }
 }
