--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -17,11 +17,16 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/next-redux-wrapper": "^3.0.0",
     "@types/react": "17.0.16",
+    "@types/react-redux": "^7.1.18",
+    "@types/redux-form": "^8.3.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
