--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@supabase/supabase-js": "^1.21.0",
     "axios": "^0.21.1",
     "next": "11.0.1",
