--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "typescript": "~4.1.5",
     "uuid": "^8.3.2"
