--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "todo-typescript",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf dist && tsc",
     "preserve": "rimraf dist && tsc",
     "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
     "start": "cross-env NODE_ENV=production node dist/index.js",
