hopefully working now fingers crossed

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,12 +1,15 @@
 FROM node:14.15.4
 
-#COPYWORKDIR /app
+#WORKDIR /app
+#RUN mkdir app
+#RUN cd app
 
 COPY package.json ./
 #COPY package-lock.json ./app/
 
+
 RUN npm i
 
-COPY . ./
+#COPY . ./
 
 CMD [ "npm", "run", "start" ]
