--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:14.15.4
 
-#WORKDIR /app/
+WORKDIR /app
 
 
-COPY package.json ./
+#COPY package.json ./
 
 
 RUN npm i
 
-COPY . ./
+#COPY . ./
 #COPY tsconfig.json ./app/tsconfig.json
 
 #RUN npm run build
