--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -28,6 +28,7 @@
     "@types/react": "17.0.16",
     "@types/react-redux": "^7.1.18",
     "@types/redux-form": "^8.3.2",
+    "@types/styled-components": "^5.1.12",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
