--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf dist && tsc -w",
     "preserve": "rimraf dist && tsc",
-    "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon --inspect=0.0.0.0:9229 dist/index.js\"",
+    "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
