--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@reduxjs/toolkit": "^1.6.1",
     "@supabase/supabase-js": "^1.21.0",
     "axios": "^0.21.1",
     "next": "11.0.1",
