--- a/to-do/package.json
+++ b/to-do/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "@supabase/supabase-js": "^1.22.2",
+    "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
     "redux": "^4.1.1"
   },
   "devDependencies": {
