--- a/to-do/package.json
+++ b/to-do/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "make run": "next dev && next start",
+    "make run": "npm i && npm run dev",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
