--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "react-redux": "^7.2.4",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.3.5"
   }
 }
