--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,8 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "watch": true
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
