--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "start": "nodemon -w backend --ext ts --exec ts-node index.ts"
+    "start": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc -b"
   }
 }
