--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./backend
+    image: test-backend:latest
     ports:
       - '4000:4000'
 
@@ -11,5 +12,6 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./frontend
+    image: test-frontend:latest
     ports:
       - '3000:3000'
