--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -13,14 +13,17 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-redux": "^8.0.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "chai": "^4.3.6",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "mocha": "^9.2.2",
     "typescript": "4.6.3"
   }
 }
