--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -10,16 +10,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/styled-components": "^5.1.25",
     "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
+    "react-table": "^7.7.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.1",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "chai": "^4.3.6",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
