--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@types/styled-components": "^5.1.25",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "next": "12.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
