--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -17,6 +17,7 @@
     "next": "12.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-redux": "^8.0.1",
     "react-table": "^7.7.0",
     "styled-components": "^5.3.5"
@@ -25,6 +26,7 @@
     "@types/node": "17.0.25",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "@types/react-modal": "^3.13.1",
     "chai": "^4.3.6",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
