--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -11,15 +11,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@types/styled-components": "^5.1.25",
-    "axios": "^0.26.1",
+    "express": "^4.17.3",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "next": "12.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.4",
     "react-redux": "^8.0.1",
-    "react-table": "^7.7.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
