--- a/biproxi/package.json
+++ b/biproxi/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "make run": "node ssr-server.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
@@ -21,6 +22,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "17.0.25",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
