--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "14.5.1",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "mongoose": "^6.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
