--- a/inconceivable-movie-reviews/package.json
+++ b/inconceivable-movie-reviews/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@nrwl/next": "15.3.0",
     "core-js": "^3.6.5",
+    "mongo-express": "^1.0.0",
+    "mongodb": "^4.12.1",
+    "mongoose": "^6.8.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
