--- a/inconceivable-movie-reviews/package.json
+++ b/inconceivable-movie-reviews/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@nrwl/next": "15.3.0",
     "core-js": "^3.6.5",
+    "mongodb": "^4.12.1",
+    "mongoose": "^6.8.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
+    "swr": "^1.3.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "28.1.1",
     "cypress": "^11.0.0",
     "eslint": "~8.15.0",
@@ -47,8 +51,10 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.3.0",
+    "postcss": "^8.4.19",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
