implemented a website background and got the logo working for the navbar

--- a/inconceivable-movie-reviews/package.json
+++ b/inconceivable-movie-reviews/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@nrwl/next": "15.3.0",
     "core-js": "^3.6.5",
     "mongodb": "^4.12.1",
