--- a/inconceivable-movie-reviews/package.json
+++ b/inconceivable-movie-reviews/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.4",
     "@nrwl/next": "15.3.0",
     "core-js": "^3.6.5",
+    "mongo-express": "^1.0.0",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
     "next": "13.0.0",
