--- a/inconceivable-movie-reviews/package.json
+++ b/inconceivable-movie-reviews/package.json
@@ -10,7 +10,7 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.4",
-    "@nrwl/next": "15.3.0",
+    "@nrwl/next": "15.3.3",
     "core-js": "^3.6.5",
     "mongo-express": "^1.0.0",
     "mongodb": "^4.12.1",
@@ -24,14 +24,14 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
-    "@nrwl/cypress": "15.3.0",
-    "@nrwl/eslint-plugin-nx": "15.3.0",
-    "@nrwl/jest": "15.3.0",
-    "@nrwl/linter": "15.3.0",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "15.3.0",
-    "@nrwl/web": "15.3.0",
-    "@nrwl/workspace": "15.3.0",
+    "@nrwl/cypress": "15.3.3",
+    "@nrwl/eslint-plugin-nx": "15.3.3",
+    "@nrwl/jest": "15.3.3",
+    "@nrwl/linter": "15.3.3",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/react": "15.3.3",
+    "@nrwl/web": "15.3.3",
+    "@nrwl/workspace": "15.3.3",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
@@ -52,7 +52,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "15.3.0",
+    "nx": "15.3.3",
     "postcss": "^8.4.19",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
@@ -62,3 +62,4 @@
     "typescript": "~4.8.2"
   }
 }
+
